[package]
authors = [ "The syscall.rs Project Developers", "Kevin Boos" ]
description = "Raw system calls"
documentation = "https://docs.rs/sc"
keywords = ["syscall", "system", "call"]
license = "MIT"
name = "sc"
readme = "README.md"
repository = "https://github.com/kevinaboos/syscall.rs"
version = "0.2.1"
